finally fixed that damn glitch in the non-euclidean system

--- a/.gitignore
+++ b/.gitignore
@@ -431,3 +431,4 @@ bin/com/googlecode/lanterna/bundle/LanternaThemes.class
 bin/com/googlecode/lanterna/bundle/DefaultTheme.class
 bin/com/googlecode/lanterna/bundle/BundleLocator.class
 bin/com/googlecode/lanterna/bundle/BundleLocator$UTF8Control.class
+frogmodaiGame.jar
